--- a/glo.css
+++ b/glo.css
@@ -33,7 +33,7 @@ body {
   color: white;
   font-family: monospace;  
   background: #1a1a1a;
-  background-image: radial-gradient(rgba(127, 59, 200, 0.23), #fff0);
+  background-image: #fff0
   border: solid 2px rgb(127, 59, 200);
   border-radius: 2px;
 }
