--- a/css/latest.css
+++ b/css/latest.css
@@ -1,39 +1,86 @@
-/* glo.css */ 
+/* playful.css */ 
+
+/* fredoka font */
+
+/* hebrew */
+@font-face {
+  font-family: 'Fredoka';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/fredoka/v14/X7nP4b87HvSqjb_WIi2yDCRwoQ_k7367_B-i2yQag0-mac3OLyX8E-mKpNk.woff2) format('woff2');
+  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Fredoka';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/fredoka/v14/X7nP4b87HvSqjb_WIi2yDCRwoQ_k7367_B-i2yQag0-mac3OLyX8H-mKpNk.woff2) format('woff2');
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Fredoka';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/fredoka/v14/X7nP4b87HvSqjb_WIi2yDCRwoQ_k7367_B-i2yQag0-mac3OLyX8EemK.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* everything else */
+
 
 body {
-  background: #1a1a1a;
-  color: white;
-  font-family: monospace;
+  color: rgb(0, 0, 0);
+  font-family: 'Fredoka', 'Comic Sans MS', sans-serif;
   margin: 0px;
-  background: #1a1a1a;
-  background-image: radial-gradient(rgba(127, 59, 200, 0.36), #fff0);
+  background: #ffffff;
   padding: 300px;
   text-align: center;
+
+  /* stripes*/
+
+  background: linear-gradient(-90deg, rgba(0, 0, 0, .05) 1px, transparent 1px),
+  linear-gradient(rgba(0, 0, 0, .05) 1px, transparent 1px),
+  linear-gradient(transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
+  linear-gradient(-90deg, #aaa 1px, transparent 1px),
+  linear-gradient(-90deg, transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
+  linear-gradient(#aaa 1px, transparent 1px),
+  #f2f2f2;
+  background-size: 4px 4px, 4px 4px, 80px 80px, 80px 80px, 80px 80px, 80px 80px, 80px 80px, 80px 80px;
+
 }
 
 .button-primary {
+  font-family: 'Fredoka', 'Comic Sans MS', sans-serif;
   padding: 15px;
-  color: white;
-  font-family: monospace;  
-  background: black;
-  border: solid 2px rgb(127, 59, 200);
-  border-radius: 2px;
+  color: white;  
+  background: rgb(112, 224, 102);
+  border: solid 1px rgba(0, 0, 0, 0.384);
+  border-radius: 15px;
   cursor: pointer;
 }
 
 .project-cards{
+  font-family: 'Fredoka', 'Comic Sans MS', sans-serif;
   padding: 15px;  
 }
 
 .project-card {
+  font-family: 'Fredoka', 'Comic Sans MS', sans-serif;
   display: inline-block;
   padding: 30px;
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
   color: white;
-  font-family: monospace;  
-  background: #1a1a1a;
-  background-image: #fff0
-  border: solid 2px rgb(127, 59, 200);
-  border-radius: 2px;
+  background: rgb(250, 71, 71);
+  border: solid 1px rgba(0, 0, 0, 0.384);
+  border-radius: 15px;
 }
